# Authy

./: .gitignore  LICENSE  README.md
docs/: express.md  fastapi.md  flask.md  index.md  nextjs.md  streamlit.md
examples/: README.md
examples/express-app/: .env.example  README.md  package.json
examples/express-app/public/: index.html
examples/express-app/src/: auth.ts  server.ts
examples/express-app/src/middleware/: requireAuth.ts
examples/express-app/src/routes/: auth.ts
examples/fastapi-app/: .env.example  README.md  auth.py  main.py  requirements.txt
examples/fastapi-app/static/: index.html
examples/flask-app/: .env.example  README.md  app.py  auth.py  requirements.txt
examples/flask-app/static/: index.html
examples/nextjs-app/: .env.example  README.md  middleware.ts  package.json
examples/nextjs-app/app/: layout.tsx  page.tsx
examples/nextjs-app/app/api/auth/[...provider]/: route.ts
examples/nextjs-app/app/api/providers/: route.ts
examples/nextjs-app/app/dashboard/: LogoutButton.tsx  page.tsx
examples/nextjs-app/app/login/: page.tsx
examples/nextjs-app/lib/: auth.ts
examples/streamlit-app/: README.md  app.py  auth.py  requirements.txt
examples/streamlit-app/pages/: 1_profile.py  2_settings.py
python/: README.md  pyproject.toml
python/src/authy/: __init__.py  auth_manager.py  types.py
python/src/authy/providers/: __init__.py  google.py  local.py  m365.py  sso.py
python/src/authy/utils/: __init__.py  hash_utils.py  jwt_utils.py
python/tests/: test_auth_manager.py  test_google_provider.py  test_local_provider.py  test_m365_provider.py  test_sso_provider.py
typescript/: README.md  jest.config.js  package-lock.json  package.json
typescript/src/: AuthManager.ts  index.ts  types.ts
typescript/src/providers/: GoogleProvider.ts  LocalProvider.ts  M365Provider.ts  SSOProvider.ts
typescript/src/utils/: jwt.ts
typescript/tests/: AuthManager.test.ts  GoogleProvider.test.ts  LocalProvider.test.ts  M365Provider.test.ts  SSOProvider.test.ts
