[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authy"
version = "0.1.0"
description = "Multi-provider authentication framework supporting local, Google, M365, and SSO"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["authentication", "oauth", "oidc", "saml", "google", "m365", "sso"]
authors = [
    { name = "Authy Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = [
    "authlib>=1.3.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "httpx>=0.27.0",
    "python3-saml>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://github.com/jej2k5/Authy"
Repository = "https://github.com/jej2k5/Authy"
"Bug Tracker" = "https://github.com/jej2k5/Authy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
